--- a/app/src/js/app/components/reports/views/reportsView.html
+++ b/app/src/js/app/components/reports/views/reportsView.html
@@ -169,7 +169,7 @@
                   <!-- <div class="flex-item">$ {{track}}</div> -->
                   <div style="flex: 5%; width: 5%">
                     <a href="" ng-click="editTrack(track)">
-                      <img src="assets/images/icons/pencil-ico.svg" />
+                      <i class="ri-pencil-line"></i>
                     </a>
                   </div>
                 </div>
@@ -293,7 +293,7 @@
                 <td>$ {{track.trackCost}}</td>
                 <td>
                   <a href="" ng-click="editTrack(track)">
-                    <img src="assets/images/icons/pencil-ico.svg" />
+                    <i class="ri-pencil-line"></i>
                   </a>
                 </td>
               </tr>
@@ -399,7 +399,7 @@
                 <div class="flex-item">$ {{track.trackCost}}</div>
                 <div style="flex: 5%; width: 5%">
                   <a href="" ng-click="editAutoTrack(track)">
-                    <img src="assets/images/icons/pencil-ico.svg" />
+                    <i class="ri-pencil-line"></i>
                   </a>
                 </div>
               </div>
@@ -563,7 +563,7 @@
                 <div class="flex-item">{{track.currency}} {{track.trackCost}}</div>
                 <div style="flex: 5%; width: 5%">
                   <a href="" ng-click="editTrelloTrack(track)">
-                    <img src="assets/images/icons/pencil-ico.svg" />
+                    <i class="ri-pencil-line"></i>
                   </a>
                 </div>
               </div>
@@ -725,7 +725,7 @@
                 <div class="flex-item">$ {{track.trackCost}}</div>
                 <div style="flex: 5%; width: 5%">
                   <a href="" ng-click="editJiraTrack(track)">
-                    <img src="assets/images/icons/pencil-ico.svg" />
+                    <i class="ri-pencil-line"></i>
                   </a>
                 </div>
               </div>
