--- a/app/src/js/app/components/users/views/userFormView.html
+++ b/app/src/js/app/components/users/views/userFormView.html
@@ -129,13 +129,13 @@
             </tr>
         </thead>
         <tbody ng-if="identify == true">
-            <tr ng-repeat="month in performance.actual" style="background-color: lightgreen;">
+            <tr ng-repeat="month in performance.actual" style="background-color: #B8EBD0;">
                 <td>{{month.month}}</td>
                 <td>{{month.year}}</td>
                 <td>{{month.salary}}</td>
                 <td>{{month.costHour}}</td>
             </tr>
-            <tr ng-repeat="month in performance.past" style="background-color: lightblue;">
+            <tr ng-repeat="month in performance.past" style="background-color: #89BBFE;">
                 <td>{{month.month}}</td>
                 <td>{{month.year}}</td>
                 <td>{{month.salary}}</td>
