--- a/app/src/less/nav.less
+++ b/app/src/less/nav.less
@@ -434,7 +434,7 @@
   .imm-menu__nav-item--selected {
     background: @color-light-gray;
     box-shadow: none;
-    color: @color-blue;
+    color: @color-active-text;
     // border-right: 1px solid @color-blue;
   }
 
