--- a/app/src/js/app/components/calendar/views/calendarView.html
+++ b/app/src/js/app/components/calendar/views/calendarView.html
@@ -1,4 +1,6 @@
 
+<div class="imm-wa__cnt">
+
 <div class="preload" ng-show="loading" 
 style="display: flex; justify-content:center; position: fixed;width: 100%;height: 100vh;background-color: #7a78782e;z-index: 10000; left:0;top:0">
   <img style=" width: 3%" src="assets/images/spinner.svg"></i></div>
@@ -28,3 +30,4 @@ style="display: flex; justify-content:center; position: fixed;width: 100%;height
 </br>
 <div class="new-title-calendar">{{currentMonthText}}</div>
 <div class="calendar" ui-calendar="uiConfig.calendar" ng-model="eventSources" calendar='calendar' >
+</div>
