--- a/app/src/less/buttons.less
+++ b/app/src/less/buttons.less
@@ -2,19 +2,24 @@
 
 .imm-btn {
   display: inline-block;
-  padding: .0625rem 1rem;
+  padding: 0rem 1.2rem;
   line-height: 2rem;
-  height: 2.125rem;
-  font-size: .8rem;
-  font-weight: 700;
-  font-family: @font-sans-serif;
-  color: @color-white;
-  background: @primary-color;
-  border-bottom: 1px solid darken(@primary-color, 10%);
-  transition: background-color .2s ease-in, border-color .2s ease-in;
+  /* height: 2.125rem; */
+  /* font-size: .8rem; */
+  /* font-weight: 700; */
+  font-family: 'Roboto', sans-serif;
+  color: #ffffff;
+  background: @color-active-text;
+  /* border-bottom: 1px solid #3333ff; */
+  transition: background-color 0.2s ease-in, border-color 0.2s ease-in;
   cursor: pointer;
-  .user-select(none);
-  border-radius: 0px;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border-radius: 5px;
 }
 
 .imm-btn-sm {
@@ -26,13 +31,13 @@
 
 .imm-btn:active,
 .imm-btn:hover {
-  background-color: lighten(@primary-color, 5%);
-  border-color: darken(@primary-color, 5%);
+  background-color: lighten(@color-active-text, 5%);
+  border-color: darken(@color-active-text, 5%);
 }
 
 .imm-btn:active {
-  background-color: darken(@primary-color, 10%);
-  border-color: darken(@primary-color, 15%);
+  background-color: darken(@color-active-text, 10%);
+  border-color: darken(@color-active-text, 15%);
 }
 
 .imm-btn[disabled] {
@@ -47,7 +52,7 @@
   background-color: @color-btn-gray;
   color: @color-btn-gray-text;
   border-color: darken(@color-btn-gray, 10%);
-  border-radius: 0px;
+  border-radius: 5px;
 }
 
 .imm-btn--alt:active,
@@ -66,7 +71,7 @@
 .imm-btn--round {
 
   display: inline-block;
-  border-bottom: 1px solid rgba(0,0,0,.1);
+  border-bottom: 1px solid rgba(0, 0, 0, .1);
   font-size: .875rem;
   line-height: 1.4rem;
   text-transform: uppercase;
@@ -77,8 +82,8 @@
   word-break: keep-all;
 
   &:hover {
-    background-color: lighten(@primary-color, 5%);
-    border-color: darken(@primary-color, 5%);
+    background-color: lighten(@color-active-text, 5%);
+    border-color: darken(@color-active-text, 5%);
   }
 }
 
@@ -88,13 +93,13 @@
   text-transform: uppercase;
   font-weight: 600;
   border: 0;
-  border-bottom: 1px solid rgba(0,0,0,.1);
+  border-bottom: 1px solid rgba(0, 0, 0, .1);
 
   &:hover {
     background-color: darken(@color-btn-gray, 15%);
     color: inherit;
     border-width: 0 0 1px 0;
-    border-bottom: 1px solid rgba(0,0,0,.1);
+    border-bottom: 1px solid rgba(0, 0, 0, .1);
   }
 }
 
@@ -115,6 +120,7 @@
 
   &:hover {
     background-color: @primary-color;
+
     i {
       color: @color-white;
     }
