--- a/app/src/less/forms.less
+++ b/app/src/less/forms.less
@@ -36,14 +36,15 @@ input[type=number],
 input[type=email],
 select,
 textarea {
-  border-bottom: 1px solid @color-fields-gray;
-  color: @color-black;
-  padding: .25rem 0;
+  padding: 0.5rem 0.5rem;
   resize: none;
   min-width: 50%;
   font-size: 1rem;
   line-height: 1.5rem;
-  transition: all .2s ease-in;
+  transition: all 0.2s ease-in;
+  border-radius: 5px;
+  border: 1px solid @color-hollow-input;
+  color: @color-black;
 }
 
 input[type=text]:focus,
@@ -52,37 +53,37 @@ input[type=search]:focus,
 input[type=number]:focus,
 input[type=email]:focus,
 textarea:focus {
-  border-color: @primary-color;
+  border-color: @color-active-text;
 
-  &[readonly]{
+  &[readonly] {
     border-color: @color-dark-gray;
   }
 
 }
 
-status-select.focus + .imm-frm__lbl-name,
-input[type=text]:focus + .imm-frm__lbl-name,
-input[type=password]:focus + .imm-frm__lbl-name,
-input[type=search]:focus + .imm-frm__lbl-name,
-input[type=number]:focus + .imm-frm__lbl-name,
-input[type=email]:focus + .imm-frm__lbl-name,
-select:focus + .imm-frm__lbl-name,
-textarea:focus + .imm-frm__lbl-name {
+status-select.focus+.imm-frm__lbl-name,
+input[type=text]:focus+.imm-frm__lbl-name,
+input[type=password]:focus+.imm-frm__lbl-name,
+input[type=search]:focus+.imm-frm__lbl-name,
+input[type=number]:focus+.imm-frm__lbl-name,
+input[type=email]:focus+.imm-frm__lbl-name,
+select:focus+.imm-frm__lbl-name,
+textarea:focus+.imm-frm__lbl-name {
   color: @primary-color;
 }
 
-input[type=text][readonly]:focus + .imm-frm__lbl-name,
-input[type=password][readonly]:focus + .imm-frm__lbl-name,
-input[type=search][readonly]:focus + .imm-frm__lbl-name,
-input[type=number][readonly]:focus + .imm-frm__lbl-name,
-input[type=email][readonly]:focus + .imm-frm__lbl-name, 
-select[readonly]:focus + .imm-frm__lbl-name,
-textarea[readonly]:focus + .imm-frm__lbl-name {
+input[type=text][readonly]:focus+.imm-frm__lbl-name,
+input[type=password][readonly]:focus+.imm-frm__lbl-name,
+input[type=search][readonly]:focus+.imm-frm__lbl-name,
+input[type=number][readonly]:focus+.imm-frm__lbl-name,
+input[type=email][readonly]:focus+.imm-frm__lbl-name,
+select[readonly]:focus+.imm-frm__lbl-name,
+textarea[readonly]:focus+.imm-frm__lbl-name {
   color: @color-dark-gray;
 }
 
 
-select:active + .imm-frm__lbl-name {
+select:active+.imm-frm__lbl-name {
   color: @primary-color;
 }
 
@@ -90,7 +91,7 @@ select:active + .imm-frm__lbl-name {
 textarea {
   font-size: 1rem;
   line-height: 1.625rem;
-  padding: 0  0 1rem 0;
+  padding: 0 0 1rem 0;
   height: 4.875rem;
 }
 
@@ -115,10 +116,12 @@ select {
   background-repeat: no-repeat;
   background-position-x: right;
   background-position-y: center;
-  outline:none;
+  outline: none;
   display: inline-block;
-  cursor:pointer;
+  // cursor: pointer;
   position: relative;
+  line-height: 1.5rem;
+  padding: 0.5rem 0.5rem;
 }
 
 select:focus {
@@ -128,7 +131,9 @@ select:focus {
 
 /* Targetting Webkit browsers only. FF will show the dropdown arrow with so much padding. */
 @media screen and (-webkit-min-device-pixel-ratio:0) {
-  select {padding-right:18px}
+  select {
+    padding-right: 18px
+  }
 }
 
 
@@ -140,20 +145,20 @@ select:focus {
 
 // FIELD CONTAINERS
 
-* + .imm-frm__fld {
+*+.imm-frm__fld {
   margin-top: 2rem;
 }
 
-* + .imm-frm__fldgrp {
+*+.imm-frm__fldgrp {
   margin-top: 2rem;
 }
 
 .imm-frm--sm {
-  * + .imm-frm__fld {
+  *+.imm-frm__fld {
     margin-top: 0.5rem;
   }
 
-  * + .imm-frm__fldgrp {
+  *+.imm-frm__fldgrp {
     margin-top: 0.5rem;
   }
 }
@@ -199,7 +204,7 @@ select:focus {
     flex: 2;
   }
 
-  .imm-frm__fld + .imm-frm__fld {
+  .imm-frm__fld+.imm-frm__fld {
     margin: 0 0 0 1.25rem;
   }
 }
@@ -216,7 +221,9 @@ select:focus {
   select {
     width: 100%;
   }
-  input[type="radio"], input[type="file"] {
+
+  input[type="radio"],
+  input[type="file"] {
     display: inline-block;
     width: auto;
   }
@@ -229,9 +236,7 @@ select:focus {
 
 }
 
-.imm-frm__lbl--radio {
-
-}
+.imm-frm__lbl--radio {}
 
 .imm-frm__lbl-name {
   position: absolute;
@@ -263,9 +268,7 @@ select:focus {
 
 // ERROR MESSAGES
 
-.imm-frm__error-messages {
-
-}
+.imm-frm__error-messages {}
 
 .imm-frm__error-item {
   color: @color-red;
@@ -318,70 +321,6 @@ select:focus {
 //  }
 //
 //}
-
-// HOLLOW FIELDS FORMS
-
-.imm-form--hollow {
-
-  input[type=text],
-  input[type=password],
-  input[type=search],
-  input[type=number],
-  input[type=email],
-  select,
-  textarea {
-    border: 1px solid @color-hollow-input;
-    padding: .25rem .5rem;
-    font-size: 1rem;
-    line-height: 2.5rem;
-    height: 2.5rem;
-    box-shadow: inset 0px 1px 2px 0px rgba(0,0,0,0.20);
-  }
-
-  status-select.focus,
-  input[type=text]:focus,
-  input[type=password]:focus,
-  input[type=search]:focus,
-  input[type=number]:focus,
-  input[type=email]:focus,
-  textarea:focus {
-    border-color: @primary-color;
-  }
-
-  status-select.focus + .imm-frm__lbl-name,
-  input[type=text]:focus + .imm-frm__lbl-name,
-  input[type=password]:focus + .imm-frm__lbl-name,
-  input[type=search]:focus + .imm-frm__lbl-name,
-  input[type=number]:focus + .imm-frm__lbl-name,
-  input[type=email]:focus + .imm-frm__lbl-name,
-  select:focus + .imm-frm__lbl-name,
-  textarea:focus + .imm-frm__lbl-name {
-    color: @primary-color;
-  }
-
-
-  * + .imm-frm__fld {
-    margin-top: 20px;
-  }
-
-  .imm-frm__lbl-name {
-    font-family: @font-sans-serif;
-    text-transform: uppercase;
-    color: @color-hollow-label;
-  }
-
-  .imm-frm__actions {
-
-    margin-top: 30px;
-
-    .imm-btn {
-      width: 100%;
-    }
-
-  }
-
-
-}
 
 .imm-frm--center {
   width: 100%;
