--- a/app/src/js/app/shared/views/topbar.html
+++ b/app/src/js/app/shared/views/topbar.html
@@ -79,7 +79,7 @@ handleSmallScreens()
 <div class="top-bar__container">
     <nav class="navbar">
     <div class="container">
-      <div class="navbar-header">
+      <!-- <div class="navbar-header">
         <button class="navbar-toggler" data-toggle="open-navbar1">
           <span></span>
           <span></span>
@@ -88,7 +88,7 @@ handleSmallScreens()
         <a href="#">
           <h4>Lex<span>Tracking</span></h4>
         </a>
-      </div>
+      </div> -->
       
       <div class="top-bar__current_tracking_container tooltip-container" ng-mouseover="showTrackTooltip = true" ng-mouseleave="showTrackTooltip = false">
         <span ng-show="showTrackTooltip" class="tooltip-box">
