--- a/app/src/less/nav.less
+++ b/app/src/less/nav.less
@@ -6,7 +6,7 @@
   z-index: 99;
   display: block;
   float: left;
-  width: 15%;
+  width: @navbar-width;
 
   .imm-menu__wrp {
     display: block;
@@ -190,7 +190,7 @@
 
 .imm-menu__nav-item {
   padding: 10px;
-  width: 100%;
+  width: 80%;
   line-height: 1.25rem;
   display: block;
   padding: .625rem .75rem;
@@ -198,7 +198,7 @@
   font-weight: 500;
   font-size: 0.875rem;
   position: relative;
-  // transition: background-color .2s ease-in, box-shadow .15s ease-in, width 0.05s ease;
+  border-radius: 5px; // transition: background-color .2s ease-in, box-shadow .15s ease-in, width 0.05s ease;
   .user-select(none);
   font-family: 'Roboto', sans-serif;
   margin: 10px 0px;
