--- a/app/src/less/nav.less
+++ b/app/src/less/nav.less
@@ -190,7 +190,7 @@
 
 .imm-menu__nav-item {
   padding: 10px;
-  width: 80%;
+  // width: 80%;
   line-height: 1.25rem;
   display: block;
   padding: .625rem .75rem;
@@ -198,7 +198,7 @@
   font-weight: 500;
   font-size: 0.875rem;
   position: relative;
-  border-radius: 5px; // transition: background-color .2s ease-in, box-shadow .15s ease-in, width 0.05s ease;
+  border-radius: 5px; // transition: background-color .2s ease-in, box-shadow .15s ease-in, width 0.5s ease;
   .user-select(none);
   font-family: 'Roboto', sans-serif;
   margin: 10px 0px;
@@ -416,6 +416,7 @@
 }
 
 .light-mode {
+
   .imm-menu {
     background: @color-white;
     // border-right: 1px solid rgba(0, 0, 0, 0.05);
@@ -576,7 +577,7 @@
 }
 
 .imm-menu__collapsed .imm-menu__nav-item--selected {
-  margin-left: 10px;
+  // margin-left: 10px;
   transition: all .5s ease;
 }
 
