--- a/app/src/less/redesign.less
+++ b/app/src/less/redesign.less
@@ -696,7 +696,7 @@ tbody {
 }
 
 .imm-menu__collapsed .imm-menu__nav-item--selected {
-  margin-left: 10px;
+  // margin-left: 10px;
   transition: all .5s ease;
 }
 
@@ -819,7 +819,7 @@ tbody {
 
 .btn_tracker_container {
   padding-left: 20px;
-  margin-top: 5px;
+  margin-top: 8px;
 }
 
 .btn_tracker_container i {
@@ -832,10 +832,28 @@ tbody {
   border: 1px solid #363B3F;
 }
 
+.collapse-btn {
+  position: absolute;
+  bottom: 30px;
+  right: 30px;
+}
+
+.switch_mode-btn {
+  position: absolute;
+  bottom: 30px;
+  left: 0px;
+}
+
 .top-bar__current_tracking_container {
   display: inline-flex;
   min-width: 500px;
   padding: 10px;
+}
+
+.top-bar__current_tracking_container .timer {
+  font-size: 1rem;
+  margin-left: 20px;
+  line-height: 35px;
 }
 
 .top-bar__current_tracking_container .imm-select.ui-select-container {
