--- a/app/src/js/app/shared/views/navbar.html
+++ b/app/src/js/app/shared/views/navbar.html
@@ -13,63 +13,76 @@
             </a>
         </div>
         <a href="#" class="imm-menu__nav-item" ui-sref-active="imm-menu__nav-item--selected" ui-sref="app.dashboard">
-            <b></b>
-            <b></b>
+            <!-- <b></b>
+            <b></b> -->
             <i class="ri-home-line"></i> <span ng-show="!thisHide">{{ 'navigation.dashboard' | translate }}</span>
         </a>
         
         <a href="#" class="imm-menu__nav-item" ui-sref-active="imm-menu__nav-item--selected" ui-sref="app.calendar">
-            <b></b>
-            <b></b>
+            <!-- <b></b>
+            <b></b> -->
             <i class="ri-calendar-line"></i> <span ng-show="!thisHide">{{ 'navigation.calendar' | translate }}</span>
         </a>
         <a ng-if="isAdmin == 'true' || userRole == 'pm'" href="#" class="imm-menu__nav-item" ui-sref-active="imm-menu__nav-item--selected" ui-sref="app.users">
-            <!-- <b></b> -->
-            <!-- <b></b> -->
+            <!-- <b></b>
+            <b></b> -->
             <i class="ri-user-line"></i> <span ng-show="!thisHide">{{ 'navigation.users' | translate }}</span>
         </a>
         <a ng-if="userRole == 'developer'" ui-sref="app.userEdit({id:userId})"" class="imm-menu__nav-item" ui-sref-active="imm-menu__nav-item--selected">
-            <b></b>
-            <b></b>
+            <!-- <b></b>
+            <b></b> -->
             <i class="ri-user-settings-line"></i> <span ng-show="!thisHide">{{ 'navigation.my-profile' | translate }}</span>
         </a>
         <a ng-if="isAdmin == 'true' || userRole == 'pm' " href="#" class="imm-menu__nav-item" ui-sref-active="imm-menu__nav-item--selected" ui-sref="app.clients">
-            <b></b>
-            <b></b>
+            <!-- <b></b>
+            <b></b> -->
             <i class="ri-user-shared-line"></i> <span ng-show="!thisHide">{{ 'navigation.clients' | translate }}</span>
         </a>
         <a href="#" class="imm-menu__nav-item" ui-sref-active="imm-menu__nav-item--selected" ui-sref="app.projects">
-            <b></b>
-            <b></b>
+            <!-- <b></b>
+            <b></b> -->
             <i class="ri-briefcase-line"></i> <span ng-show="!thisHide">{{ 'navigation.projects' | translate }}</span>
         </a>
         <a href="#" ng-if="userRole != 'clients'" class="imm-menu__nav-item" ui-sref-active="imm-menu__nav-item--selected" ui-sref="app.dashboardTasks">
-            <b></b>
-            <b></b>
+            <!-- <b></b>
+            <b></b> -->
             <i class="ri-task-line"></i> <span ng-show="!thisHide">{{ 'navigation.tasks' | translate }}</span>
         </a>
         <a  href="#" class="imm-menu__nav-item" ui-sref-active="imm-menu__nav-item--selected" ui-sref="app.reports">
-            <b></b>
-            <b></b>
+            <!-- <b></b>
+            <b></b> -->
             <i class="ri-bar-chart-line"></i> <span ng-show="!thisHide">{{ 'Reportes' }}</span>
         </a>
         <a ng-if="isAdmin == 'true'"  href="#" class="imm-menu__nav-item" ui-sref-active="imm-menu__nav-item--selected" ui-sref="app.CRM">
-            <b></b>
-            <b></b>
+            <!-- <b></b>
+            <b></b> -->
             <i class="ri-folder-open-line"></i> <span ng-show="!thisHide">{{ 'CRM'}}</span>
         </a>
         <a ng-if="isAdmin == 'true'"  href="#" class="imm-menu__nav-item" ui-sref-active="imm-menu__nav-item--selected" ui-sref="app.apps">
-            <b></b>
-            <b></b>
+            <!-- <b></b>
+            <b></b> -->
             <i class="ri-google-play-line"></i> <span ng-show="!thisHide">{{ 'APP’s'}}</span>
         </a>
 
     </nav>
 
-    <div class="imm-user" ng-class="{'active': userToolsActive == true , 'imm-menu__collapsed': thisHide == true}" ng-show="!thisHide">
+    <button class="imm-btn collapse-btn" ng-init="collapseSideBar = true" ng-click="hideItems();">
+        <i ng-if="!thisHide" class="ri-arrow-left-s-line"></i>
+        <i ng-if="thisHide" class="ri-arrow-right-s-line"></i>
+    </button>
+    <button ng-if="darkMode == 0" class="imm-btn switch_mode-btn" ng-click="toggleMode()">
+        <i class="ri-moon-line"></i>
+    </button>
+    <button ng-if="darkMode == 1" class="imm-btn switch_mode-btn" ng-click="toggleMode()">
+        <!-- <i class="ri-moon-line"></i> -->
+        <i class="ri-sun-line"></i>
+    </button>
+    <!-- <div class="imm-user" ng-class="{'active': userToolsActive == true , 'imm-menu__collapsed': thisHide == true}" ng-show="!thisHide">
         <div>
-            <!--<img class="imm-user__pic" src="/assets/images/catalogos/usuarios.svg" alt="{{ userName }}" title="{{ userName }}" />-->
+            
+            <img class="imm-user__pic" src="/assets/images/catalogos/usuarios.svg" alt="{{ userName }}" title="{{ userName }}" />
             <div class="imm-user__tools">
+                
                 <div class="imm-user__toggle" ng-click="toggleActive()" ng-show="!thisHide">
                     <div class="imm-user__name">{{ userName }}</div>
                     <div class="imm-user__profile">{{ userRole }}</div>
@@ -83,5 +96,5 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 </div>
