--- a/app/src/less/custom.less
+++ b/app/src/less/custom.less
@@ -787,10 +787,7 @@ input[type="text"]:disabled {
 }
 
 body {
-    /*background-image: url(/assets/images/bg.svg);*/
-    background-position: right bottom;
-    background-repeat: no-repeat;
-    background-size: 600px;
+    background-color: @color-light-gray;
 }
 
 .selectize-input.disabled {
