--- a/app/src/less/layout.less
+++ b/app/src/less/layout.less
@@ -19,6 +19,10 @@
   width: 85%;
   // margin-top: @topbar-height;
   height: 100vh;
+  // padding: 20px;
+}
+
+.imm-menu__nav {
   padding: 20px;
 }
 
@@ -37,7 +41,7 @@
 
   background: @color-bg-side-bar;
   width: @sidebar-width;
-  transition: width 0.05s ease;
+  transition: width 0.5s ease;
   // background-image: url("/assets/images/bg-menu.svg");
   // background-position: bottom center;
   // background-repeat: no-repeat;
@@ -47,7 +51,7 @@
   .imm-menu__wrp {
     display: block;
     width: @navbar-width;
-    transition: width 0.05s ease;
+    transition: width 0.5s ease;
     min-height: 100%;
     min-height: 100vh;
     overflow: hidden;
@@ -69,7 +73,7 @@
 
 div.imm-menu__collapsed,
 .imm-menu__collapsed {
-  transition: width 0.05s ease;
+  transition: width .5s ease;
   width: 60px;
 }
 
@@ -86,7 +90,7 @@ button.imm-menu__icon--collapsed {
   display: block;
   height: 52px;
   width: 100%;
-  transition: width 0.05s ease;
+  transition: width 0.5s ease;
   position: absolute;
   top: 0;
   left: 0;
