--- a/app/src/js/app/shared/views/topbar.html
+++ b/app/src/js/app/shared/views/topbar.html
@@ -89,7 +89,10 @@ handleSmallScreens()
           <h4>Lex<span>Tracking</span></h4>
         </a>
       </div> -->
-      
+      <div class="top-bar__logo">
+        <img src="../assets/logo/lextracking-logo.svg" alt="">
+      </div>
+
       <div class="top-bar__current_tracking_container tooltip-container" ng-mouseover="showTrackTooltip = true" ng-mouseleave="showTrackTooltip = false">
         <span ng-show="showTrackTooltip" class="tooltip-box">
           Ahora trackear es mas sencillo<br>
