--- a/app/src/less/redesign.less
+++ b/app/src/less/redesign.less
@@ -848,6 +848,9 @@ tbody {
   display: inline-flex;
   min-width: 500px;
   padding: 10px;
+  width: 65%;
+  padding: 0 5rem;
+  justify-content: flex-start;
 }
 
 .top-bar__current_tracking_container .timer {
