--- a/app/src/less/top-bar.less
+++ b/app/src/less/top-bar.less
@@ -72,16 +72,18 @@ a {
   // flex-wrap: wrap;
   // align-items: center;
   // justify-content: space-between;
-  width: 83%;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   position: fixed;
-  left: 16%;
-  min-height: 80px;
-  top: 10px;
-  border-radius: 5px;
+  left: 0;
+  min-height: 70px;
+  top: 0px;
+  border-radius: 0px;
+  z-index: 100;
+
 
   @media (max-width: 768px) {
     display: block;
@@ -170,6 +172,7 @@ a {
     align-items: center;
     flex-basis: auto;
     flex-grow: 1;
+    
 
     @media (max-width: 768px) {
       display: none;
@@ -279,5 +282,14 @@ a {
 
   @media (max-width: 768px) {
     font-size: 1.05rem;
+  }
+}
+
+
+// TOP BAR LOGO
+.top-bar__logo{
+  width: 15%;
+  img{
+    width: 80%;
   }
 }
