--- a/app/src/less/custom.less
+++ b/app/src/less/custom.less
@@ -202,7 +202,7 @@
     line-height: 1.42857143;
     color: #337ab7;
     text-decoration: none;
-    background-color: #fff;
+    background-color: #F9F9F9;
     border: 1px solid #ddd;
 }
 
@@ -236,7 +236,7 @@
 .pagination>.active>a:focus,
 .pagination>.active>span:focus {
     z-index: 3;
-    color: #fff;
+    color: #F9F9F9;
     cursor: default;
     background-color: #337ab7;
     border-color: #337ab7;
@@ -250,7 +250,7 @@
 .pagination>.disabled>a:focus {
     color: #777;
     cursor: not-allowed;
-    background-color: #fff;
+    background-color: #F9F9F9;
     border-color: #ddd;
 }
 
@@ -307,7 +307,7 @@
 .pager li>span {
     display: inline-block;
     padding: 5px 14px;
-    background-color: #fff;
+    background-color: #F9F9F9;
     border: 1px solid #ddd;
     border-radius: 15px;
 }
@@ -334,7 +334,7 @@
 .pager .disabled>span {
     color: #777;
     cursor: not-allowed;
-    background-color: #fff;
+    background-color: #F9F9F9;
 }
 
 .label {
@@ -343,7 +343,7 @@
     font-size: 75%;
     font-weight: bold;
     line-height: 1;
-    color: #fff;
+    color: #F9F9F9;
     text-align: center;
     white-space: nowrap;
     vertical-align: baseline;
@@ -503,7 +503,7 @@
         width: 18px;
         height: 18px;
         border-radius: inherit;
-        background: #ffffff;
+        background: #F9F9F9;
         -webkit-transition-timing-function: cubic-bezier(.54, 1.85, .5, 1);
         -webkit-transition-duration: 0.4s;
         -webkit-transition-property: transform, background-color, box-shadow;
@@ -520,7 +520,7 @@
     input[type="checkbox"].ios-switch:checked+div>div {
         -webkit-transform: translate3d(20px, 0, 0);
         -moz-transform: translate3d(20px, 0, 0);
-        background-color: #ffffff;
+        background-color: #F9F9F9;
         box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3), 0px 0px 0 1px rgba(8, 80, 172, 1);
     }
 
@@ -660,7 +660,7 @@
 }
 
 .imm-table-org tbody tr {
-    background: #fff;
+    background: #F9F9F9;
     border-bottom: 0px;
 }
 
@@ -872,7 +872,7 @@ body {
 }
 
 .statusWarning {
-    background-color: #ffff00ba !important;
+    background-color: #F9F9F9f00ba !important;
 }
 
 .dynamic-table:nth-child(even) {
@@ -880,7 +880,7 @@ body {
 }
 
 .dynamic-table:nth-child(odd) {
-    background: #FFF;
+    background: #F9F9F9;
 }
 
 .dynamic-table {
@@ -958,7 +958,7 @@ body {
 }
 
 .flex-row:nth-child(even) {
-    background-color: #FFF;
+    background-color: #F9F9F9;
 }
 
 .flex-item {
@@ -1027,7 +1027,7 @@ body {
 }
 
 .imm-selectFilter .ui-select-dropdown {
-    background: #ffffff;
+    background: #F9F9F9;
     color: #333333;
     border-radius: 3px;
     border: 1px solid #F8F8F8;
@@ -1049,7 +1049,7 @@ body {
     height: 0;
     border-style: solid;
     border-width: 0 5px 8px 5px;
-    border-color: transparent transparent #ffffff transparent;
+    border-color: transparent transparent #F9F9F9 transparent;
     z-index: -1;
 }
 
@@ -1062,7 +1062,7 @@ body {
     top: auto;
     bottom: -6px;
     border-width: 8px 5px 0 5px;
-    border-color: #ffffff transparent transparent transparent;
+    border-color: #F9F9F9 transparent transparent transparent;
 }
 
 .imm-selectFilter .ui-select-choices-content {
@@ -1080,7 +1080,7 @@ body {
 
 .imm-selectFilter .ui-select-choices-row:hover {
     background: @color-active-text;
-    color: #ffffff;
+    color: #F9F9F9;
 }
 
 .imm-selectFilter .ui-select-choices-row:hover .ui-select-choices-row-inner {
@@ -1156,7 +1156,7 @@ section {
 .hero-unit {
     position: relative;
     padding: 40px 0;
-    color: #fff;
+    color: #F9F9F9;
     text-align: center;
     text-shadow: 0 1px 3px rgba(0, 0, 0, .4), 0 0 30px rgba(0, 0, 0, .075);
     background: #020031;
@@ -1285,7 +1285,7 @@ section {
     /* font-size: .8rem; */
     /* font-weight: 700; */
     font-family: 'Roboto', sans-serif;
-    color: #ffffff;
+    color: #F9F9F9;
     background: @color-active-text;
     /* border-bottom: 1px solid #3333ff; */
     transition: background-color 0.2s ease-in, border-color 0.2s ease-in;
