--- a/app/src/less/layout.less
+++ b/app/src/less/layout.less
@@ -16,7 +16,7 @@
   // vertical-align: top;
   display: block;
   float: right;
-  width: 85%;
+  width: 87%;
   // margin-top: @topbar-height;
   height: 100vh;
   // padding: 20px;
@@ -24,6 +24,7 @@
 
 .imm-menu__nav {
   padding: 20px;
+  padding-top: 30px;
 }
 
 .imm-wa--session {
@@ -42,10 +43,6 @@
   background: @color-bg-side-bar;
   width: @sidebar-width;
   transition: width 0.5s ease;
-  // background-image: url("/assets/images/bg-menu.svg");
-  // background-position: bottom center;
-  // background-repeat: no-repeat;
-  // background-size: 165px 75px;
   overflow: hidden;
 
   .imm-menu__wrp {
