--- a/app/src/less/var.less
+++ b/app/src/less/var.less
@@ -5,7 +5,7 @@
 @font-size-body: 14px;
 
 @color-black: #363B3F;
-@color-white: #ffffff;
+@color-white: #F9F9F9;
 @color-blue: #195ABD;
 @color-light-gray: #f2f4f8;
 @color-gray: #333333;
@@ -65,8 +65,8 @@
 /* NAVBAR */
 @navbar-logo-height: 60px;
 @navbar-logo-height-lg: 70px;
-@navbar-width: 15%;
-@navbar-width-collapsed: 90px;
+@navbar-width: 13%;
+@navbar-width-collapsed: 5%;
 @navbar-width-lg: 220px;
 @topbar-height: 80px;
 @topbar-width: 100%;
