--- a/app/src/js/app/shared/views/topbar.html
+++ b/app/src/js/app/shared/views/topbar.html
@@ -5,7 +5,7 @@
         </a>
     </div>
     <div class="top-bar__current_tracking_container">
-        <p style="color: #fff; font-weight: 800; margin: 0 23px; font-size: 10px; line-height: 1.5;" ng-show="timerRunning">
+        <p style="color: #F9F9F9; font-weight: 800; margin: 0 23px; font-size: 10px; line-height: 1.5;" ng-show="timerRunning">
             <label title="{{currentTrack.projectName + ' - ' + currentTrack.taskName}}">{{currentTrack.projectName + ' - ' + currentTrack.taskName | truncateTail:true:45:'...'}}</label>
             <label style="display: block;"><span style="vertical-align: super;">{{timer}}</span><span ng-click="stopTrack()">&nbsp;&nbsp;<img class="img_stop" src="/assets/images/stopNavBar.png"></span></label>
         </p>
@@ -147,6 +147,15 @@ handleSmallScreens()
             </a>
             <ul class="dropdown" id="profile">
               <li><a ng-click="logout()">Cerrar Sesión</a></li>
+              <li>
+                <button ng-if="darkMode == 0" class="imm-btn switch_mode-btn" ng-click="toggleMode()">
+                    <i class="ri-moon-line"></i>
+                </button>
+                <button ng-if="darkMode == 1" class="imm-btn switch_mode-btn" ng-click="toggleMode()">
+                    <!-- <i class="ri-moon-line"></i> -->
+                    <i class="ri-sun-line"></i>
+                </button>
+              </li>
               <!-- <li><a href="#">Some another category</a></li>
               <li class="separator"></li>
               <li><a href="#">Seprated link</a></li>
