--- a/app/src/less/buttons.less
+++ b/app/src/less/buttons.less
@@ -8,7 +8,7 @@
   /* font-size: .8rem; */
   /* font-weight: 700; */
   font-family: 'Roboto', sans-serif;
-  color: #ffffff;
+  color: #F9F9F9;
   background: @color-active-text;
   /* border-bottom: 1px solid #3333ff; */
   transition: background-color 0.2s ease-in, border-color 0.2s ease-in;
