--- a/app/src/less/mixins.less
+++ b/app/src/less/mixins.less
@@ -7,7 +7,7 @@
 // @font-serif: 'Open Sans', sans-serif;
 @font-size-body: 16px;
 @color-black: #000000;
-@color-white: #ffffff;
+@color-white: #F9F9F9;
 @color-blue: #203678;
 @color-green: #33C098;
 @color-light-gray: #F8F8F8;
@@ -25,7 +25,7 @@
 
 @primary-color: #181A1C;
 
-@navbar-width: 15%;
+@navbar-width: 13%;
 
 /* Warning messages colors */
 @color-red: #FF2020;
