--- a/app/src/less/tables.less
+++ b/app/src/less/tables.less
@@ -218,7 +218,7 @@ tbody tr:hover {
 
 .totaltr {
   background-color: #337ab7;
-  color: #fff;
+  color: #F9F9F9;
   font-size: 1.2rem;
   text-transform: uppercase;
 }
