--- a/app/src/js/app/shared/views/topbar.html
+++ b/app/src/js/app/shared/views/topbar.html
@@ -92,9 +92,9 @@ handleSmallScreens()
       <div class="top-bar__logo">
         <img src="../assets/logo/lextracking-logo.svg" alt="">
       </div>
-
-      <div class="top-bar__current_tracking_container tooltip-container" ng-mouseover="showTrackTooltip = true" ng-mouseleave="showTrackTooltip = false">
-        <span ng-show="showTrackTooltip" class="tooltip-box">
+      <!-- ng-mouseover="showTrackTooltip = true" ng-mouseleave="showTrackTooltip = false" -->
+      <div class="top-bar__current_tracking_container tooltip-container">
+        <span ng-show="showTrackTooltip" class="tooltip-box" ng-mouseleave="showTrackTooltip = false" >
           Ahora trackear es mas sencillo<br>
           Solo busca la tarea y dale play!
         </span>
