--- a/app/src/less/layout.less
+++ b/app/src/less/layout.less
@@ -9,6 +9,9 @@
   height: 100vh;
   // table-layout: fixed;
 }
+.app-container{
+  background-color: @color-light-gray;
+}
 
 .imm-menu,
 .imm-wa {
@@ -19,6 +22,7 @@
   width: 87%;
   // margin-top: @topbar-height;
   height: 100vh;
+  transition: width 1s ease;
   // padding: 20px;
 }
 
