--- a/app/src/less/top-bar.less
+++ b/app/src/less/top-bar.less
@@ -183,7 +183,7 @@ a {
     // Ul
     .navbar-nav {
       margin-left: auto;
-      margin-right: 70px;
+      // margin-right: 70px;
       flex-direction: row;
       display: flex;
       padding-left: 0;
@@ -224,8 +224,8 @@ a {
         .dropdown {
           list-style: none;
           position: absolute;
-          top: 150%;
-          left: 0;
+          top: 130%;
+          left: -40px;
           background-color: #F9F9F9;
           padding-top: @navbar-dropdown-padding-y;
           padding-bottom: @navbar-dropdown-padding-y;
