fix login and colapse button

--- a/app/src/js/app/shared/views/navbar.html
+++ b/app/src/js/app/shared/views/navbar.html
@@ -65,11 +65,11 @@
         </a>
 
     </nav>
-        <div class="navbar_btn_container">
+        <!-- <div class="navbar_btn_container">
             <button class="imm-btn collapse-btn" ng-init="collapseSideBar = true" ng-click="hideItems();">
             <i ng-if="!thisHide" class="ri-arrow-left-s-line"></i>
             <i ng-if="thisHide" class="ri-arrow-right-s-line"></i>
-        </button>
+        </button> -->
     </div>
     
     <!-- <div class="imm-user" ng-class="{'active': userToolsActive == true , 'imm-menu__collapsed': thisHide == true}" ng-show="!thisHide">
