--- a/app/src/less/redesign.less
+++ b/app/src/less/redesign.less
@@ -847,11 +847,11 @@ tbody {
 }
 
 .navbar_btn_container{
-  position:absolute; 
-  bottom: 30px; 
-  left: 0; 
-  width:100%; 
-  display: block;
+  // position:absolute; 
+  // bottom: 30px; 
+  // left: 0; 
+  // width:100%; 
+  // display: block;
 }
 
 .collapse-btn {
