--- a/app/src/js/app/components/session/views/indexView.html
+++ b/app/src/js/app/components/session/views/indexView.html
@@ -1,39 +1,52 @@
 <div class="imm-session">
     <div class="imm-wa imm-wa--session">
         <div class="imm-session-blk-wrp">
-            <section class="imm-session-blk">
-                <header class="imm-session-blk__hdr">
-                    <h1 class="imm-session-blk__logo">
-                        <img src="/assets/images/lextracking-logo.svg" title="LexTracking" style="margin: 0 auto; width: 85%;">
-                    </h1>
-                </header>
-                <div class="imm-session-blk__cnt">
-                    <ng-form name="login-frm">
-                        <form class="imm-form imm-form--hollow" ng-submit="authenticate(user.email, user.password)">
-                            <fieldset>
-                                <div class="imm-frm__fld">
-                                    <label class="imm-frm__lbl">
-                                        <input type="text" ng-model="user.email">
-                                        <b class="imm-frm__lbl-name">{{ 'session.user' | translate }}</b>
-                                    </label>
-                                </div>
-
-                                <div class="imm-frm__fld">
-                                    <label class="imm-frm__lbl">
-                                        <input type="password" ng-model="user.password">
-                                        <b class="imm-frm__lbl-name">{{ 'session.password' | translate }}</b>
-                                    </label>
-                                </div>
-
-                                <div class="imm-frm__actions">
-                                    <button class="imm-btn" ng-disabled="!user.email || !user.password" ng-click="authenticate()">{{ 'session.enter' | translate }}</button>
-                                </div>
-                                <p class="err-display">{{error}}</p>
-                            </fieldset>
-                        </form>
-                    </ng-form>
+             <div class="imm-frm__fldgrp">
+                <div class="imm-frm__fld">
+                    <div class="login-img-container">
+                        <img src="/assets/images/login_ilustration.svg" title="LexTracking" style="margin: 25% auto; width: 70%;">
+                    </div>
                 </div>
-            </section>
+                <div class="imm-frm__fld">
+                    <div class="imm-session-blk">
+                        <header class="imm-session-blk__hdr">
+                            <h1 class="imm-session-blk__logo">
+                                <img src="/assets/logo/lextracking-logo.svg" title="LexTracking" style="margin: 0 auto; width: 85%;">
+                            </h1>
+                        </header>
+                        <div class="imm-session-blk__cnt">
+                            <ng-form name="login-frm">
+                                <form class="imm-form imm-form--hollow" ng-submit="authenticate(user.email, user.password)">
+                                    <fieldset>
+                                        <div class="imm-frm__fld">
+                                            <label class="imm-frm__lbl">
+                                                <input type="text" ng-model="user.email">
+                                                <b class="imm-frm__lbl-name">{{ 'session.user' | translate }}</b>
+                                            </label>
+                                        </div>
+                                        <br>
+                                        <div class="imm-frm__fld" style="margin: 0px">
+                                            <label class="imm-frm__lbl">
+                                                <input type="password" ng-model="user.password">
+                                                <b class="imm-frm__lbl-name">{{ 'session.password' | translate }}</b>
+                                            </label>
+                                        </div>
+                                        <br>
+                                        <div class="imm-frm__fld" style="margin: 0px">
+                                            <button class="imm-btn imm-btn__login" ng-disabled="!user.email || !user.password" ng-click="authenticate()">{{ 'session.enter' | translate }}</button>
+                                        </div>
+                                        <p class="err-display">{{error}}</p>
+
+                                        <!-- <div class="imm-frm__actions">
+                                            
+                                        </div> -->
+                                    </fieldset>
+                                </form>
+                            </ng-form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
