--- a/app/src/less/session-blk.less
+++ b/app/src/less/session-blk.less
@@ -1,21 +1,27 @@
 
 .imm-session-blk {
 
-  display: inline-block;
-  min-width: 350px;
-  max-width: 800px;
+  // display: inline-block;
+  // min-width: 350px;
+  // max-width: 800px;
   background: @color-white;
   background: rgba(255,255,255,0.95);
   .box-shadow(0px 2px 4px 0px rgba(0,0,0,0.20));
+  width: 70%;
+  margin: 30% auto !important;
+  border-radius: 5px;
 
 }
 
 .imm-session-blk__hdr {
-  background-image: linear-gradient(-180deg, darken(@primary-color, 10%) 3%, @primary-color 100%);
+  // background-image: linear-gradient(-180deg, darken(@primary-color, 10%) 3%, @primary-color 100%);
+  background-color: @color-light-gray;
   line-height: 1.65rem;
   font-size: 1.5rem;
   padding: 22px 40px;
   text-align: left;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 .imm-session-blk__logo {
@@ -32,5 +38,8 @@
   padding: 30px 40px;
 }
 
-
-
+.imm-btn__login{
+  width: 100%;
+  line-height: 2.5rem;
+  font-size: 1rem
+}
